k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: 585853585762.dkr.ecr.ap-south-1.amazonaws.com/helloworld-ecr-njs
        # ↑ CI will auto-replace 'latest' with actual commit SHA on every push 1
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health     ← calls your /health route
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
